media/css/cms/pages/flare26-release-notes.css
/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/

.fl-release-notes {
    --release-notes-padding: var(--token-spacing-lg) * 2;
    --release-notes-sidebar-inline-size: min(100% / 3, 222px);
    --release-notes-text-color-secondary: var(
        --token-color-black-1
    ); /* TODO: theme, see if it's globally applicable as secondary text color */

    /* moving to pre-footer */
    .fl-main {
        border-end-end-radius: 0;
        border-end-start-radius: 0;
    }

    img {
        max-block-size: unset; /* override Flare26 default */
    }

    @media (prefers-color-scheme: dark) {
        --release-notes-text-color-secondary: var(--token-color-grey-1);
    }
}

.notes-head {
    text-align: center;
}

.fl-heading-group {
    margin: 0 auto var(--token-layout-xs);
    max-inline-size: 60%;
}

.fl-l-release-notes-wrapper {
    margin-inline: auto;
    max-inline-size: min(
        (100% - var(--release-notes-padding)),
        var(--token-width-desktop-wide-banner)
    );
}

.fl-c-release-notes-logo {
    inline-size: 55px; /* use rems? */
    margin: auto;
}

.fl-c-release-version {
    line-height: 1;
    margin-block-end: var(--token-spacing-lg);
}

.fl-c-release-summary-sidebar,
.fl-c-release-product,
.fl-c-release-date {
    margin-block-end: 0;
}

.fl-c-release-version,
.fl-c-release-product {
    display: block;
}

.fl-c-release-date {
    color: var(--release-notes-text-color-secondary);
}

.fl-c-release-summary-details {
    .fl-heading {
        font-family: var(--token-font-family-mozilla-headline);
    }
}

.fl-c-release-notes-summary {
    margin-block-end: var(--token-layout-xs);
}

.fl-c-release-notes-pagination-heading {
    font-family: var(--token-font-family-mozilla-headline);
    font-size: var(--fl-theme-font-size-heading-2xs);
    font-weight: var(--fl-theme-font-weight-headline);
}

.fl-c-release-notes-pagination-version {
    color: var(--release-notes-text-color-secondary);
}

.fl-c-release-notes-content {
    .fl-l-release-notes-with-sidebar {
        border-block-start: var(--fl-theme-divider);
        padding-block-start: var(--token-layout-xs);
        scroll-margin-block-start: var(--token-layout-md);
    }
}

.fl-c-release-notes-heading {
    align-items: center;
    display: flex;
    font-size: 1.5rem; /* 24px - static */
    gap: var(--token-spacing-sm);
}

.fl-c-release-notes-pre-footer {
    --release-notes-padding: 0px;
    background: var(--fl-theme-background);
    border-end-end-radius: var(--fl-theme-main-border-radius);
    border-end-start-radius: var(--fl-theme-main-border-radius);
    padding: var(--token-spacing-md);
}

.fl-c-release-notes-pre-footer-content {
    --fl-theme-color-link: var(--fl-theme-color-text);
    background: var(--token-gradient-purple);
    border-radius: var(--fl-theme-main-border-radius);

    > * {
        color: var(--fl-theme-color-text);
        font-size: var(--fl-theme-font-size-body-xs);
    }

    a {
        display: block;
    }
}

.fl-l-release-notes-pre-footer-columns {
    display: grid;
    gap: var(--token-layout-xs);
    padding: var(--token-layout-md-half);
}

@media (--viewport-below-md) {
    .fl-c-release-summary-details {
        margin-block-start: var(--token-layout-2xs);
    }
}

@media (--viewport-md-up) {
    /* Essentially recreating Protocol sidebar with sidebar */
    .fl-l-release-notes-with-sidebar {
        column-gap: var(--token-spacing-lg);
        display: grid;
        grid-template-columns:
            [sidebar-start] var(--release-notes-sidebar-inline-size)
            [sidebar-end main-start] 1fr [main-end];

        &.fl-t-sidebar-end {
            grid-template-columns:
                [main-start] 1fr
                [main-end sidebar-start] var(
                    --release-notes-sidebar-inline-size
                )
                [sidebar-end];
        }
    }

    .fl-l-release-notes-sidebar {
        grid-column: sidebar;
    }

    .fl-l-release-notes-main {
        grid-column: main;
    }

    /* end Protocol sidebar recreation */

    .fl-c-release-notes-summary {
        grid-template-rows:
            [version-start] auto [version-end product-start] min-content
            [product-end date-start] 1fr [date-end];
    }

    .fl-c-release-summary-sidebar {
        display: grid;
        grid-row: version-start / product-end;
        grid-template-rows: subgrid;
        margin-block-end: 0;
    }

    .fl-c-release-version,
    .fl-c-release-product {
        align-self: start;
    }

    .fl-c-release-summary-details {
        grid-row: product-start / date-end;
    }

    .fl-c-release-notes-pre-footer-content {
        > * {
            font-size: var(--fl-theme-font-size-body-sm);
        }
    }

    .fl-l-release-notes-pre-footer-columns {
        grid-template-columns: repeat(3, 1fr);
        padding: var(--token-layout-md);
    }
}

/* Snowflake query! Refactor away if possible */
@media (min-width: 1300px) {
    .fl-l-release-notes-pre-footer-columns {
        padding-inline: 0;
    }
}

/* Copied from release-notes.scss */

/* supports js/base/video-prefers-reduced-motion.es6.js */
/* stylelint-disable block-no-empty  */
@keyframes js-check-autoplay {
}

video[autoplay] {
    animation: js-check-autoplay 0s;
}

.is-firefox .c-download-cta {
    display: none;
}

.mzp-l-article > ul > li:not(:last-child) {
    border-block-end: var(--fl-theme-divider);
    margin-block-end: var(--token-layout-2xs);
    padding-block-end: var(--token-layout-2xs);
    scroll-margin-block-start: var(--token-layout-md);
}

.mzp-l-article > ul {
    list-style-type: none;
    margin-block-end: 0;
    margin-inline-start: 0;
}

.mzp-l-article > ul > li:last-child {
    margin-block-end: var(--token-layout-xs);
}

/* avoid doubling-up margin from divider line */
.release-note-content > *:last-child {
    margin-block-end: 0;
}

/* pagination */
.c-release-pagination-list {
    display: flex;
    list-style: none;
    margin: 0;

    :where(li) {
        margin: 0;
    }
}

/* keep next link stuck to end of container */
.c-release-pagination-next {
    margin-inline-start: auto;
    text-align: end;
}

.c-release-pagination-link {
    display: grid; /* stack the spans, make focus ring around block instead of inline */
    text-decoration: none;

    .c-release-pagination-direction {
        text-decoration: underline;
    }

    &:hover,
    &:focus-visible {
        .c-release-pagination-direction {
            text-decoration: none;
        }
    }
}

.c-release-pagination-direction {
    .c-release-pagination-previous &::before {
        content: '\2190\00a0';
    }

    .c-release-pagination-next &::after {
        content: '\00a0\2192';
    }
}

/* special content (i.e. progressive rollout) */
.release-note {
    .release-note-content {
        inline-size: 100%;
    }

    .bug-id {
        display: block;
        margin-block-end: 0;
        text-align: end;
    }

    .relevant-countries {
        margin-block-end: var(--token-spacing-lg);
    }

    video {
        margin-block-end: var(--token-spacing-lg);
    }

    .release-note-progressive-rollout-indicator {
        border: 2px solid var(--token-color-grey-2);
        border-radius: var(--token-border-radius-2xs);
        inline-size: 210px;
        margin: auto;
        padding: var(--token-spacing-sm) 0;
        text-align: center;

        img {
            display: inline-block;
            inline-size: 100px;
        }

        p {
            margin-block-end: var(--token-spacing-sm);
        }

        details {
            border-block-end: none;
            padding: 0 var(--token-spacing-md);

            p {
                font-size: var(--fl-theme-font-size-body-2xs);
                text-align: start;
            }

            summary {
                color: var(--token-color-black-4);
                cursor: pointer;
                display: block;
                font-size: var(--fl-theme-font-size-body-2xs);
                font-weight: bold;
                padding: 0 0 var(--token-spacing-xs);
                position: static;
                text-decoration: underline;

                &::after {
                    margin-inline-start: 0;
                }
            }
        }

        @media (prefers-color-scheme: dark) {
            background-color: var(--token-color-soft-purple-2);
            border-color: var(--token-color-soft-purple-2);
            color: var(--token-color-black-4);
        }
    }

    @media (--viewport-md-up) {
        display: flex;

        .release-note-progressive-rollout-indicator {
            margin-inline-start: var(--token-spacing-lg);
            max-inline-size: 210px;
            min-inline-size: 210px;
        }
    }
}

